Add SponsorController, SponsorRepository, and Render DB config

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,14 @@
-spring.application.name=lilrockstars-backend
+
+spring.datasource.url=jdbc:postgresql://hBvfCGB4zF9M0B5ELZU0lnes5921ulIo@dpg-d3k0ijpgv73c73dh1jj0-a.virginia-postgres.render.com/lilrockstars_db
+spring.datasource.username=lilrockstars_db_user
+spring.datasource.password=hBvfCGB4zF9M0B5ELZU0lnes5921ulIo
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.show-sql=true
+server.port=8080
+
+
+
+
+
