--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -6,11 +6,11 @@ plugins {
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
-description = 'Demo project for Spring Boot'
+description = 'Lil Rockstars Backend'
 
 java {
 	toolchain {
-		languageVersion = JavaLanguageVersion.of(17)
+		languageVersion = JavaLanguageVersion.of(21)
 	}
 }
 
@@ -19,7 +19,15 @@ repositories {
 }
 
 dependencies {
+	// --- Spring Boot core ---
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+	// --- Databases ---
+	runtimeOnly 'com.h2database:h2' // for local testing
+	implementation 'org.postgresql:postgresql:42.7.3' // for Render
+
+	// --- Testing ---
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
