modified application.properties to use safe password and username information

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,14 +1,22 @@
-
-spring.datasource.url=jdbc:postgresql://hBvfCGB4zF9M0B5ELZU0lnes5921ulIo@dpg-d3k0ijpgv73c73dh1jj0-a.virginia-postgres.render.com/lilrockstars_db
-spring.datasource.username=lilrockstars_db_user
-spring.datasource.password=hBvfCGB4zF9M0B5ELZU0lnes5921ulIo
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# ===============================
+# Database Configuration (uses Render environment variables)
+# ===============================
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+# ===============================
+# JPA / Hibernate
+# ===============================
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:update}
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# ===============================
+# Server
+# ===============================
 server.port=8080
-
-
-
 
 
