--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -5,10 +5,19 @@ spring.datasource.url=jdbc:h2:mem:lilrockstarsdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
+
+# H2 console
 spring.h2.console.enabled=true
-<<<<<<< HEAD
 spring.h2.console.path=/h2-console
+
+# Hibernate / JPA
 spring.jpa.hibernate.ddl-auto=update
-=======
-spring.h2.console.path=/h2-console
->>>>>>> 917952875e7a7d0b1831f67d8ef8afb31e438123
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# Optional for logging
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# ? Make Spring run schema/data SQL AFTER JPA creates tables
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
