--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,33 +1,12 @@
-<<<<<<< HEAD
+# ==========================================
+# Base config - choose active profile
+# ==========================================
 
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
-spring.profiles.active=prod
-=======
-# ===============================
-# Database Configuration (uses Render environment variables)
-# ===============================
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
-spring.datasource.driver-class-name=org.postgresql.Driver
+# When working locally:
+spring.profiles.active=dev
 
-# ===============================
-# JPA / Hibernate
-# ===============================
-spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:update}
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-
-# ===============================
-# Server
-# ===============================
 server.port=8080
 
+# When deploying to Render, set this environment variable:
+# SPRING_PROFILES_ACTIVE=prod
 
->>>>>>> 917952875e7a7d0b1831f67d8ef8afb31e438123
