--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -1,11 +1,20 @@
-# =============================
-# PROD (Render) - PostgreSQL
-# =============================
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
+# ==========================================
+# PROD (Render) - Cloud PostgreSQL
+# ==========================================
+
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
-<<<<<<< HEAD
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Hibernate / JPA
 spring.jpa.hibernate.ddl-auto=update
->>>>>>>
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Server
+server.port=${PORT:8080}
+
+# Logging
+logging.level.org.springframework.web=INFO
+logging.level.com.example.demo=INFO
