Updated application.properties to production

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 # ==========================================
 
 # When working locally:
-spring.profiles.active=dev
+spring.profiles.active=prod
 
 server.port=8080
 
