Updated to allow uploads in admin dashboard for photos.

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -7,6 +7,11 @@ spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+#Supabase
+supabase.project-url=${SUPABASE_PROJECT_URL}
+supabase.bucket-name=${SUPABASE_BUCKET_NAME}
+supabase.service-key=${SUPABASE_SERVICE_KEY}
+
 # Hibernate / JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
