--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -23,3 +23,28 @@ server.port=${PORT:8080}
 # Logging
 logging.level.org.springframework.web=INFO
 logging.level.com.example.demo=INFO
+
+# ===============================
+# Zoho Mail SMTP
+# ===============================
+spring.mail.host=smtp.zoho.com
+spring.mail.port=587
+spring.mail.username=no-reply@lilrockstarsracing.com
+spring.mail.password=${SPRING_MAIL_PASSWORD}
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.zoho.com
+spring.mail.properties.mail.smtp.from=no-reply@lilrockstarsracing.com
+
+# ===============================
+# App URLs (Password reset links)
+# ===============================
+app.frontend.base-url=https://lilrockstars-fullstack.onrender.com
+
+# Mail "from" used by PasswordResetService
+app.mail.from=no-reply@lilrockstarsracing.com
+
+# Password reset token expiry (minutes)
+app.reset.expiry-minutes=${APP_RESET_EXPIRY_MINUTES:30}
