--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -41,7 +41,7 @@ spring.mail.properties.mail.smtp.from=no-reply@lilrockstarsracing.com
 # ===============================
 # App URLs (Password reset links)
 # ===============================
-app.frontend.base-url=https://lilrockstars-fullstack.onrender.com
+app.frontend.url=https://lilrockstars-fullstack.onrender.com
 
 # Mail "from" used by PasswordResetService
 app.mail.from=no-reply@lilrockstarsracing.com
