working on password reset via email...attempt 5

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -29,7 +29,7 @@ logging.level.com.example.demo=INFO
 # ===============================
 spring.mail.host=smtp.zoho.com
 spring.mail.port=587
-spring.mail.username=no-reply@lilrockstarsracing.com
+spring.mail.username=${SPRING_MAIL_USERNAME}
 spring.mail.password=${SPRING_MAIL_PASSWORD}
 
 spring.mail.properties.mail.smtp.auth=true
@@ -41,10 +41,6 @@ spring.mail.properties.mail.smtp.from=no-reply@lilrockstarsracing.com
 # ===============================
 # App URLs (Password reset links)
 # ===============================
-app.frontend.url=https://lilrockstars-fullstack.onrender.com
-
-# Mail "from" used by PasswordResetService
-app.mail.from=no-reply@lilrockstarsracing.com
-
-# Password reset token expiry (minutes)
+app.mail.from=${APP_MAIL_FROM:no-reply@lilrockstarsracing.com}
+app.frontend.url=${APP_FRONTEND_URL:https://lilrockstars-fullstack.onrender.com}
 app.reset.expiry-minutes=${APP_RESET_EXPIRY_MINUTES:30}
