working on password reset via email...attempt 9

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -39,6 +39,6 @@ spring.mail.properties.mail.smtp.ssl.trust=smtp.zoho.com
 # ===============================
 # App URLs (Password reset links)
 # ===============================
-app.mail.from=${APP_MAIL_FROM:no-reply@lilrockstarsracing.com}
+app.mail.from=${APP_MAIL_FROM:no.reply@lilrockstarsracing.com}
 app.frontend.url=${APP_FRONTEND_URL:https://lilrockstars-fullstack.onrender.com}
 app.reset.expiry-minutes=${APP_RESET_EXPIRY_MINUTES:30}
