When admin creates a racer, it must be for a registered guardian. This will prevent orphaned racers. attempt 4

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -22,6 +22,7 @@ server.port=${PORT:8080}
 # Logging
 logging.level.org.springframework.web=INFO
 logging.level.com.example.demo=INFO
+app.audit.retention-days=30
 
 # ===============================
 # Zoho Mail SMTP
